added: search possible categories request
