# server/api/api.go
@@ -413,6 +413,36 @@ func StoreStoreIdProductsGet(w http.ResponseWriter, r *http.Request) {
 	w.Write(bytes)
 }
 
+func StoreStoreIdSearchCategoriesInputGet(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+
+	_, err := checkAuthentication(r)
+	if err != nil {
+		w.WriteHeader(http.StatusUnauthorized)
+		log.Println(err)
+		return
+	}
+
+	vars := mux.Vars(r)
+
+	possibleCategories, err := GetPossibleStoreCategoriesFromProductName(vars["input"], vars["storeId"])
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		log.Println(err)
+		return
+	}
+
+	bytes, err := json.Marshal(possibleCategories)
+	if err != nil {
+		w.WriteHeader(http.StatusBadRequest)
+		log.Println(err)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	w.Write(bytes)
+}
+
 // StoresGet return all of the stores
 func StoresGet(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
